Fixes legend and form label spacing in settings groups

--- a/_inc/client/components/forms/styles.scss
+++ b/_inc/client/components/forms/styles.scss
@@ -6,7 +6,9 @@
 	}
 }
 
-.jp-form-legend, .jp-form-label-wide {
+.jp-form-legend,
+.jp-form-label-wide {
+	margin-top: 8px;
 	padding: 0;
 	margin-bottom: rem( 5px );
 	font-size: rem( 14px );
